--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
         description: 'Runner'
         required: true
         type: string
-        default: 'self-hosted' # ubuntu-latest
+        default: 'ubuntu-latest'
 
 jobs:
   build:
@@ -28,10 +28,11 @@ jobs:
 
       - name: Set
         run: |
-          echo "UTM=$(find android/lineage/out/target/product/virtio_arm64only/VirtualMachine/UTM/ -name UTM-VM*.zip)" >> $GITHUB_ENV
-          echo "ZIP=$(find android/lineage/out/target/product/virtio_arm64only/ -name *ota.zip)" >> $GITHUB_ENV
-          echo "BOOT=$(find android/lineage/out/target/product/virtio_arm64only/boot.img)" >> $GITHUB_ENV
-          echo "RECOVERY=$(find android/lineage/out/target/product/virtio_arm64only/recovery.img)" >> $GITHUB_ENV
+          echo "KERNEL=$(find android/lineage/out/target/product/basic_x86_64_pc/kernel)" >> $GITHUB_ENV
+          echo "SYSTEM=$(find android/lineage/out/target/product/basic_x86_64_pc/system.img)" >> $GITHUB_ENV
+          echo "VENDOR=$(find android/lineage/out/target/product/basic_x86_64_pc/vendor.img)" >> $GITHUB_ENV
+          echo "RAMDISK=$(find android/lineage/out/target/product/basic_x86_64_pc/ramdisk.img)" >> $GITHUB_ENV
+          echo "RECOVERY=$(find android/lineage/out/target/product/basic_x86_64_pc/ramdisk-recovery.img)" >> $GITHUB_ENV
 
       - name: Publish
         uses: softprops/action-gh-release@v2
@@ -40,8 +41,8 @@ jobs:
           name: v${{ env.VERSION }}
           tag_name: v${{ env.VERSION }}
           files: |
-            recovery-userdebug.img
-            ${{ env.UTM }}
-            ${{ env.ZIP }}
-            ${{ env.BOOT }}
+            ${{ env.KERNEL }}
+            ${{ env.SYSTEM }}
+            ${{ env.RAMDISK }}
             ${{ env.RECOVERY }}
+            ${{ env.VENDOR }}
